# coral_object_detection_with_tflite

./: CMakeLists.txt  README.md  detection.cxx
